--- a/client/assets/main.css
+++ b/client/assets/main.css
@@ -1,10 +1,44 @@
 /* Add some global styles here! */
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+
+body {
+  background: linear-gradient(90deg, rgba(166,244,255,1) 0%, rgba(194,255,202,1) 100%);
+  font-family: "Indie Flower", cursive;
+  font-size: 1.2rem;
+}
+
+button {
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  color: #0d172a;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 1rem 1.6rem;
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 200px;
+}
+
+button:hover {
+  background-color: #1d6858ff;
+  color: #fff;
+}
 
 :root {
   --red: rgb(208, 67, 12);
-  --base-bg: #f1f3f5;
+  --base-bg: rgb(181,246,255);
 }
 
+/* 
 button.btn-small {
   font-size: 80%;
 }
@@ -21,7 +55,7 @@ a.button {
   border-radius: 0.25em;
   padding: 0.375em 0.75em;
   text-decoration: none;
-}
+} */
 
 .column {
   display: flex;
@@ -29,4 +63,5 @@ a.button {
   justify-content: center;
   align-items: center;
   gap: 1em;
+  height: 100vh;
 }
